Страница адаптирована под ширину экрана 1024 и 768

--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -8,6 +8,11 @@
   font-family: 'Inter', Arial, sans-serif;
   color: #fff;
   max-width: 159px;
-  max-height: 14px;
   align-self: flex-start;
+}
+
+@media screen and (max-width: 1023px) {
+  .lead__caption {
+    margin-left: 24px;
+  }
 }
