--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -26,3 +26,17 @@
   opacity: .8;
   cursor: pointer;
 }
+
+@media screen and (max-width: 1279px) {
+  .cover__background {
+    min-height: 640px;
+    max-width: 1024px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .cover__background {
+    min-height: 480px;
+    max-width: 768px;
+  }
+}
