--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,3 +6,15 @@
   justify-content: space-between;
   margin-bottom: 24px;
 }
+
+@media screen and (max-width: 1279px) {
+  .footer {
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .footer {
+    max-width: 720px;
+  }
+}
