--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,3 +7,16 @@
     justify-content: space-between;
     margin-bottom: 56px;
 }
+
+@media screen and (max-width: 1279px) {
+  .header {
+    max-width: 928px;
+    margin-bottom: 48px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .header {
+    max-width: 720px;
+  }
+}
