--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,10 +1,23 @@
 .intro {
   margin: 0;
   max-width: 690px;
-  max-height: 429px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   margin-left: 148px;
   margin-bottom: 92px;
+}
+
+@media screen and (max-width: 1279px) {
+  .intro {
+    margin-left: 48px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .intro {
+    margin: 0 auto;
+    max-width: 720px;
+    margin-bottom: 88px;
+  }
 }
