--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,9 +1,21 @@
 .lead {
   margin: 0 auto;
   max-width: 984px;
-  max-height: 1005px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 114px;
+  margin-bottom: 92px;
+}
+
+@media screen and (max-width: 1279px) {
+  .lead {
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .lead {
+    max-width: 768px;
+    margin-bottom: 82px;
+  }
 }
