--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -6,3 +6,15 @@
     font-family: 'Inter', Arial, sans-serif;
     background-color: #2a2c2f;
 }
+
+@media screen and (max-width: 1279px) {
+  .page {
+    min-width: 1024px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .page {
+    min-width: 768px;
+  }
+}
