--- a/blocks/places/__place/__description-one/place__description-one.css
+++ b/blocks/places/__place/__description-one/place__description-one.css
@@ -8,3 +8,10 @@
   color: #fff;
   margin-bottom: 24px;
 }
+
+@media screen and (max-width: 1023px) {
+  .place__description-one {
+    font-size: 16px;
+    line-height: 1.6;
+  }
+}
