--- a/blocks/places/__place/__description-two/place__description-two.css
+++ b/blocks/places/__place/__description-two/place__description-two.css
@@ -7,3 +7,10 @@
     line-height: 1.6;
     color: #fff;
   }
+
+  @media screen and (max-width: 1023px) {
+    .place__description-two {
+      font-size: 16px;
+      line-height: 1.6;
+    }
+  }
