--- a/blocks/places/__place/__image/place__image.css
+++ b/blocks/places/__place/__image/place__image.css
@@ -3,3 +3,9 @@
   grid-column: 1;
   max-width: 460px;
 }
+
+@media screen and (max-width: 1279px) {
+  .place__image {
+    max-width: 440px;
+  }
+}
