--- a/blocks/places/__place/__title/place__title.css
+++ b/blocks/places/__place/__title/place__title.css
@@ -8,3 +8,17 @@
   line-height: 1;
   color: #fff;
 }
+
+@media screen and (max-width: 1279px) {
+  .place__title {
+    max-width: 440px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .place__title {
+    max-width: 340px;
+    font-size: 42px;
+    line-height: 1;
+  }
+}
