--- a/blocks/places/__place/places__place.css
+++ b/blocks/places/__place/places__place.css
@@ -10,5 +10,18 @@
 }
 
 .places__place:last-of-type {
-    margin-bottom: 92px;
+    margin-bottom: 0;
+}
+
+@media screen and (max-width: 1279px) {
+  .places__place {
+    column-gap: 32px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .places__place {
+    column-gap: 28px;
+    margin-bottom: 72px;
+  }
 }
