--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -3,4 +3,18 @@
     max-width: 984px;
     display: flex;
     flex-direction: column;
+    margin-bottom: 92px;
+}
+
+@media screen and (max-width: 1279px) {
+  .places {
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .places {
+    max-width: 720px;
+    margin-bottom: 88px;
+  }
 }
