--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -40,3 +40,10 @@
     max-width: 768px;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .cover__background {
+    min-height: 200px;
+    max-width: 320px;
+  }
+}
