--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -3,9 +3,17 @@
   font-family: 'Inter', Arial, sans-serif;
   font-weight: normal;
   font-size: 18px;
-  line-height: 22px;
+  line-height: 1.2;
   text-align: center;
   color: #fff;
   max-width: 360px;
   position: relative;
+}
+
+@media screen and (max-width: 767px) {
+  .cover__subtitle {
+    font-size: 14px;
+    line-height: 1.1;
+    max-width: 288px;
+  }
 }
