--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -10,3 +10,11 @@
   position: relative;
   margin-bottom: 32px;
 }
+
+@media screen and (max-width: 767px) {
+  .cover__title {
+    font-size: 32px;
+    max-width: 288px;
+    margin-bottom: 16px;
+  }
+}
