--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -2,3 +2,10 @@
   margin: 0;
   display: flex;
 }
+
+@media screen and (max-width: 767px) {
+.footer__links {
+  flex-direction: column;
+  margin-bottom: 48px;
+}
+}
