--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,7 +1,6 @@
 .footer {
   margin: 0 auto;
   max-width: 1184px;
-  height: 18px;
   display: flex;
   justify-content: space-between;
   margin-bottom: 24px;
@@ -16,5 +15,14 @@
 @media screen and (max-width: 1023px) {
   .footer {
     max-width: 720px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer {
+    margin: 0;
+    flex-direction: column;
+    margin-left: 16px;
+    padding-bottom: 24px;
   }
 }
