--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -7,3 +7,9 @@
   color: #fff;
   margin-bottom: 40px;
 }
+
+@media screen and (max-width: 767px) {
+  .intro__title {
+    font-size: 32px;
+  }
+}
