--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -21,3 +21,11 @@
     margin-bottom: 88px;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .intro {
+    max-width: 288px;
+    margin: 0 auto;
+    margin-bottom: 64px;
+  }
+}
