--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -2,11 +2,19 @@
     margin: 0;
     text-align: center;
     max-width: 720px;
-    max-height: 200px;
     font-weight: 900;
     font-size: 96px;
     line-height: 1;
     font-family: 'Inter', Arial, sans-serif;
     color: #fff;
     margin-bottom: 32px;
+}
+
+@media screen and (max-width: 767px) {
+  .lead__title {
+    max-width: 288px;
+    font-size: 40px;
+    line-height: 1.1;
+    margin-bottom: 16px;
+  }
 }
