--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,6 +5,8 @@
     box-sizing: border-box;
     font-family: 'Inter', Arial, sans-serif;
     background-color: #2a2c2f;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 @media screen and (max-width: 1279px) {
@@ -16,5 +18,11 @@
 @media screen and (max-width: 1023px) {
   .page {
     min-width: 768px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .page {
+    min-width: 320px;
   }
 }
