--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -23,5 +23,18 @@
     grid-template-rows: repeat(6, 1fr);
     gap: 16px;
     margin-bottom: 88px;
+    margin-left: 24px;
+    margin-right: 24px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .photo-grid {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(12, 1fr);
+    gap: 12px;
+    margin-bottom: 64px;
+    margin-left: 16px;
+    margin-right: 16px;
   }
 }
