--- a/blocks/places/__place/__description/place__description.css
+++ b/blocks/places/__place/__description/place__description.css
@@ -1,3 +1,9 @@
 .place__description {
   margin: 0;
 }
+
+@media screen and (max-width: 767px) {
+  .place__description {
+    margin-left: 16px;
+  }
+}
