--- a/blocks/places/__place/__title/place__title.css
+++ b/blocks/places/__place/__title/place__title.css
@@ -22,3 +22,11 @@
     line-height: 1;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .place__title {
+    max-width: 288px;
+    font-size: 32px;
+    margin-left: 16px;
+  }
+}
