--- a/blocks/places/__place/__website/place__website.css
+++ b/blocks/places/__place/__website/place__website.css
@@ -4,5 +4,16 @@
   flex-direction: column;
   justify-content: space-between;
   align-self: end;
-  height: 46px;
+}
+
+@media screen and (max-width: 767px) {
+  .place__website {
+    align-self: flex-start;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .place__website {
+    display: none;
+  }
 }
