--- a/blocks/places/__place/places__place.css
+++ b/blocks/places/__place/places__place.css
@@ -25,3 +25,12 @@
     margin-bottom: 72px;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .places__place{
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 48px;
+  }
+}
