--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -18,3 +18,10 @@
     margin-bottom: 88px;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .places {
+    max-width: 320px;
+    margin-bottom: 64px;
+  }
+}
