--- a/blocks/places/__description-two/places__description-two.css
+++ b/blocks/places/__description-two/places__description-two.css
@@ -1,4 +1,4 @@
-.place__description-two {
+.places__description-two {
     margin: 0;
     font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
@@ -9,7 +9,7 @@
   }
 
   @media screen and (max-width: 1023px) {
-    .place__description-two {
+    .places__description-two {
       font-size: 16px;
       line-height: 1.6;
     }
