--- a/blocks/places/__description/places__description.css
+++ b/blocks/places/__description/places__description.css
@@ -1,9 +1,9 @@
-.place__description {
+.places__description {
   margin: 0;
 }
 
 @media screen and (max-width: 767px) {
-  .place__description {
+  .places__description {
     margin-left: 16px;
   }
 }
