--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -1,11 +1,11 @@
-.place__image {
+.places__image {
   grid-row: 2;
   grid-column: 1;
   max-width: 460px;
 }
 
 @media screen and (max-width: 1279px) {
-  .place__image {
+  .places__image {
     max-width: 440px;
   }
 }
