--- a/blocks/places/__link/places__link.css
+++ b/blocks/places/__link/places__link.css
@@ -1,4 +1,4 @@
-.place__link {
+.places__link {
   margin: 0;
   font-family: 'Inter', Arial, sans-serif;
   font-weight: normal;
@@ -7,7 +7,7 @@
   color: #fff;
 }
 
-.place__link:hover {
+.places__link:hover {
   opacity: .8;
   cursor: pointer;
 }
