--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -1,4 +1,4 @@
-.place__title {
+.places__title {
   margin: 0;
   max-width: 460px;
   font-family: 'Inter', Arial, sans-serif;
@@ -10,13 +10,13 @@
 }
 
 @media screen and (max-width: 1279px) {
-  .place__title {
+  .places__title {
     max-width: 440px;
   }
 }
 
 @media screen and (max-width: 1023px) {
-  .place__title {
+  .places__title {
     max-width: 340px;
     font-size: 42px;
     line-height: 1;
@@ -24,7 +24,7 @@
 }
 
 @media screen and (max-width: 767px) {
-  .place__title {
+  .places__title {
     max-width: 288px;
     font-size: 32px;
     margin-left: 16px;
