--- a/blocks/places/__website/places__website.css
+++ b/blocks/places/__website/places__website.css
@@ -1,4 +1,4 @@
-.place__website {
+.places__website {
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -7,13 +7,13 @@
 }
 
 @media screen and (max-width: 767px) {
-  .place__website {
+  .places__website {
     align-self: flex-start;
   }
 }
 
 @media screen and (max-width: 767px) {
-  .place__website {
+  .places__website {
     display: none;
   }
 }
