--- a/blocks/places/__description/places__description.css
+++ b/blocks/places/__description/places__description.css
@@ -1,9 +1,17 @@
 .places__description {
   margin: 0;
+  font-family: 'Inter', Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.6;
+  color: #fff;
+  margin-bottom: 24px;
 }
 
-@media screen and (max-width: 767px) {
-  .places__description {
-    margin-left: 16px;
+@media screen and (max-width: 1023px) {
+  .places__description-one {
+    font-size: 16px;
+    line-height: 1.6;
   }
 }
