--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -5,10 +5,12 @@
     font-family: 'Inter', Arial, sans-serif;
     font-weight: normal;
     line-height: 1.1;
+    margin-right: 18px;
 }
 
-.header__lang-link:first-of-type {
-  margin-right: 18px;
+
+
+.header__lang-link :active {
   text-decoration-line: underline;
 }
 
