--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -9,3 +9,15 @@
     max-width: 440px;
   }
 }
+
+@media screen and (max-width: 1023px) {
+  .places__image {
+    max-width: 340px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .places__image {
+    max-width: 320px;
+  }
+}
