--- a/blocks/footer/__link-items/footer__link-items.css
+++ b/blocks/footer/__link-items/footer__link-items.css
@@ -2,4 +2,12 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  display: flex;
 }
+
+@media screen and (max-width: 767px) {
+  .footer__link-items {
+    flex-direction: column;
+    margin-bottom: 48px;
+  }
+  }
