--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -2,13 +2,15 @@
     text-decoration: none;
     color: #fff;
     font-size: 24px;
-    font-family: 'Inter', Arial, sans-serif;
     font-weight: normal;
     line-height: 1.1;
     margin-right: 18px;
 }
 
-
+.header__lang-link:hover {
+  opacity: .8;
+  cursor: pointer;
+}
 
 .header__lang-link :active {
   text-decoration-line: underline;
