--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -9,30 +9,30 @@
 
 @media screen and (max-width: 1279px) {
   .photo-grid {
+    margin: 0 calc((100% - 928px)/2);
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, 1fr);
     gap: 14px;
+    margin-bottom: 92px;
   }  
 }
 
 @media screen and (max-width: 1023px) {
   .photo-grid {
+    margin: 0 calc((100% - 720px)/2);
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(6, 1fr);
     gap: 16px;
     margin-bottom: 88px;
-    margin-left: 24px;
-    margin-right: 24px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .photo-grid {
+    margin: 0 calc((100% - 288px)/2);
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(12, 1fr);
     gap: 12px;
     margin-bottom: 64px;
-    margin-left: 16px;
-    margin-right: 16px;
   }
 }
