--- a/blocks/places/__descriptions/places__descriptions.css
+++ b/blocks/places/__descriptions/places__descriptions.css
@@ -8,6 +8,6 @@
 
 @media screen and (max-width: 767px) {
   .places__descriptions {
-    margin-left: 16px;
+    margin: 0 calc((100% - 288px)/2);
   }
 }
